2010-03-31 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0-2 :
	- fix system redland
	- fix pkgdesc

2010-02-10 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0-1 :
	- new 3.2.0 release pkg based on OOO320_m12
	- apply changes made over the last months in the *beta pkg

2009-09-27 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.1-2 :
	- rebuild for db4.8

2009-08-25 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.1-1 :
	- ooo310_m19 = 3.1.1RC2 = final
	- add 2 patches to fix plugin + remove plugin option
	- change libxul buildfix to make the plugin work

2009-08-07 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.91-ooo310_m18-1 :
	- 3.1.1rc1
	- backup sofficerc file to fix
	  http://bugs.archlinux.org/task/15161
	- move all files to /usr/lib
	- add startcenter menu entry, drop templates entry
	
2009-07-03 Andreas Radke <andyrtr at archlinux.org>

	* 3.1.0-5 :
	rebuild with lowered compiler optimizations
	http://bugs.archlinux.org/task/15290

2009-07-02 Andreas Radke <andyrtr at archlinux.org>

	* 3.1.0-4 :
	buildfix for new xulrunner
	enable the plugin again

2009-07-02 Andreas Radke <andyrtr at archlinux.org>

	* 3.1.0-3 :
	- rebuild for libjpeg 7 
	- temporarely disable plugin, cannot be built
	  with new xulrunner 1.9.1
	- fix apache-ant detection
	- add libsm dependency

2009-05-30 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0-2 :
	- rebuild for icu 4.2
	- add gcc4.4 fix
	- add glibc 2.10.1 fix

2009-05-05 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0-1 :
	- based on OOO310_m11 = RC2 = final
	- major bump
	- see changes developed in openoffice-base-beta pkg

openoffice-base 3.0.1-1
- modify install msg
- build with stlport for i686 and
  without for x86_64
- fix high cpu load in file dialog FS #11710
- change to internal boost

openoffice-base 3.0.0-4
- rebuild for heimdal 1.2.1

openoffice-base 3.0.0-3
- rebuild for python 2.6

openoffice-base 3.0.0-2