@@ -31,6 +31,17 @@ source=(ftp://ftp.archlinux.org/other/openoffice/${_OO_milestone}.tar.gz
 	redland.patch
 	openoffice.profile)
 options=('!distcc' '!ccache' '!makeflags')
+md5sums=('0bce3a276b687ed228e162993ef0d8b2'
+         'e3a0b76dcd876f3d721ee7183729153d'
+         '63209bbc64c901ef105455bda0282f45'
+         '71f136a31e296a04ab68932a31dd533e'
+         '6c596129fb48316226ce3adfd3a4c86d'
+         '1dc7480a04f572ad136d35923a2af66d'
+         'c8e82b4d2324fe62ad8c6e29213e80b5'
+         '863a3ab2c17a3d11b8fa3ec321986366'
+         '0cd6f3525939d3ef6e5a30ad30c25d27'
+         '4fe3d03e037debc03b4b1e3b76c84a83'
+         '40ca15a651e78d9cf44722046552d769')
 
 # source PKGBUILD && mksource
 mksource() {
