@@ -1,2 +1,4 @@
 export OOO_FORCE_DESKTOP=gnome
 #export OOO_FORCE_DESKTOP=KDE4
+
+export PYTHONPATH=$PYTHONPATH:/usr/lib/openoffice/basis-link/program/
