@@ -1,8 +1,9 @@
 2010-03-31 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.2.0-2 :
-	- fix system redland
+	- fix many system redland issues
 	- fix pkgdesc
+	- add PYTHONPATH to the profile #18493
 
 2010-02-10 Andreas Radke <andyrtr at archlinux.org>
 
